--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="card">
-            <img src="" alt="Beach">
+            <img src="UA (2).jpg" alt="Beach">
             <div class="card-content">
                 <h3>Marine Drive Road</h3>
                 <p>A serene stretch of the Marine Drive in Cox’s Bazar, one of Bangladesh’s most beautiful coastal
